syntax = "proto3";

package longGreet;

option go_package = "github.com/SarathLUN/udemy-grpc-go-course;longGreetPb";

message Greeting{
    string first_name=1;
    string last_name=2;
}

message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
}

service GreetService{
    // Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};
}

